--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,66 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+html {
+  font-size: 62.5%;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
+    "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji",
+    "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+}
+
+body,
+html {
+  padding: 0;
+  margin: 0;
+}
+
+#target {
+  width: 100%;
+}
+
+.title {
+  width: 100%;
+  background-color: #007bff;
+  height: 8rem;
+}
+
+.title h1 {
+  color: white;
+  height: 8rem;
+  line-height: 8rem;
+  font-size: 3.5rem;
+  margin-top: 0;
+  font-weight: 500;
+  text-align: center;
+  letter-spacing: 0.2rem;
+}
+
+.container {
+  margin: 50px 200px;
+}
+
+.container h2 {
+  font-size: 1.8rem;
+}
+
+.brand-selection,
+.model-selection,
+.power-consumption-input,
+.battery-selection {
+  font-size: 2rem;
+  font-weight: 400;
+  line-height: 1.4;
+}
+
+.battery-list {
+  list-style: none;
+  padding-left: 0;
+}
+
+.list-item {
+  border: 1px solid;
+  padding: 0 1.2rem;
+  display: flex;
+  justify-content: space-between;
+  font-size: 1.4rem;
 }
